--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,5 +21,10 @@ netty:
   default:
     allocator:
       max-order: 3
-jpa.default.properties.hibernate.hbm2ddl.auto: update
-
+jpa:
+  default:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
